Fix email sending

--- a/.env
+++ b/.env
@@ -3,6 +3,6 @@ MAIL_SERVER=smtp.gmail.com
 MAIL_PORT=587
 MAIL_USE_TLS=True
 MAIL_USE_SSL=False
-MAIL_USERNAME=your_email@gmail.com
-MAIL_PASSWORD=your_app_password_here
-MAIL_DEFAULT_SENDER="OralCare Results <your-gmail@gmail.com>"
+MAIL_USERNAME=oralcare1999@gmail.com
+MAIL_PASSWORD=eaxw txal dtxu jcjs
+MAIL_DEFAULT_SENDER="OralCare Results <oralcare1999@gmail.com>"
